View Issue Details

IDProjectCategoryView StatusLast Update
0028802Open CASCADEOCCT:Modeling Algorithmspublic2017-12-11 16:54
ReporterjgvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.2.0Fixed in Version7.2.0 
Summary0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect
DescriptionThis bug is reproduced on the branch CR27079-26, case
boolean bsection N4
there is regression on CPU.
Steps To Reproducerestore [locate_data_file lh3d_px2.brep] a
explode a f
plane p_150 0 150*100 0 0 1 0
mkface f_150 p_150
donly a_455

bsection res a_455 f_150
TagsNo tags attached.
Test case numberboolean bsection N4

Relationships

related to 0028833 assignedmsv Open CASCADE Modeling Algorithms - Unstable result of intersection of the faces 

Activities

git

2017-06-02 10:38

administrator   ~0066979

Branch CR28802 has been created by jgv.

SHA-1: 5b183a4da781b13ff8df3cf52900a2941270fd74


Detailed log of new commits:

Author: jgv
Date: Fri Jun 2 10:34:12 2017 +0300

    0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect
    
    Method IntTools_FaceFace::MakeCurve is modified: tolerances of approximator are now not taken into account.

jgv

2017-06-02 10:43

developer   ~0066980

Please review the branch CR28802.

emv

2017-06-02 11:54

developer   ~0067008

Dear Julia, the patch looks OK, but it can lead to regressions. Please continue development to provide non-regression state.

git

2017-06-06 13:09

administrator   ~0067116

Branch CR28802_1 has been created by jgv.

SHA-1: 921bde8f586232c4fcf361b8d1682fd33dafd02a


Detailed log of new commits:

Author: jgv
Date: Tue Jun 6 13:09:27 2017 +0300

    0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect
    
    Method IntTools_FaceFace::MakeCurve is modified: reached tolerances 2d and 3d of approximator are not used for edges.

jgv

2017-06-06 13:10

developer   ~0067117

Please test the branch CR28802_1.

git

2017-06-06 15:29

administrator   ~0067132

Branch CR28802_2 has been created by jgv.

SHA-1: 4e34502f513c3fa3e1255f243eb7651736eb72fc


No new revisions were added by this update.

git

2017-06-06 15:34

administrator   ~0067134

Branch CR28802_2 has been updated by jgv.

SHA-1: c8bdeccef331e031b700166885a1d3f515aec035


Detailed log of new commits:

Author: jgv
Date: Tue Jun 6 15:34:43 2017 +0300

    0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect
    
        Method IntTools_FaceFace::MakeCurve is modified: reached tolerances 2d and 3d of approximator are not used for edges.

mkv

2017-06-07 14:59

tester   ~0067185

Dear BugMaster,
Branch CR28802_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 921bde8f586232c4fcf361b8d1682fd33dafd02a

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1200

Regressions/Differences/Improvements:
http://occt-tests/CR28802_1-master-OCCT/Debian70-64/summary.html
http://occt-tests/CR28802_1-master-OCCT/Windows-64-VC10/summary.html
Failed:
  boolean bsection M3
  bugs modalg_6 bug26896_1
  bugs modalg_6 bug26896_3
  bugs modalg_6 bug27310_2
  bugs modalg_6 bug28718

Only on Linux platform:
http://occt-tests/CR28802_1-master-OCCT/Debian70-64/summary.html
Failed:
  bugs modalg_6 bug26938_1
  bugs modalg_6 bug26938_2
  bugs modalg_6 bug26938_3

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 92936996 / 91760125 [+1.28%]
Total CPU difference: 19084.760000000217 / 18743.900000000256 [+1.82%]
products component :
Total MEMORY difference: 33624533 / 33639153 [-0.04%]
Total CPU difference: 6207.320000000083 / 6199.250000000062 [+0.13%]
Testing on Windows:
occt component :
Total MEMORY difference: 58851628 / 58848397 [+0.01%]
Total CPU difference: 17724.038014898728 / 17514.55987209864 [+1.20%]
products component :
Total MEMORY difference: 24290653 / 24251584 [+0.16%]
Total CPU difference: 6224.29949910006 / 6213.800631800075 [+0.17%]

There are following differences in images found by testdiff.
http://occt-tests/CR28802_1-master-OCCT/Debian70-64/diff-Debian70-64.html
http://occt-tests/CR28802_1-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE boolean bsection N4: N4.png differs
IMAGE bugs modalg_1 bug10232: bug10232.png differs

mkv

2017-06-07 14:59

tester   ~0067186

Dear jgv,
Branch CR28802_1 has been rejected due to:
- regressions/differences/improvements
- differences in images

mkv

2017-06-07 15:00

tester   ~0067187

Dear BugMaster,
Branch CR28802_2 from occt git-repository (and CR27079-26 from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: c8bdeccef331e031b700166885a1d3f515aec035
SHA-1: 6016a7c2b46054c3605c35a9a32d8a1dbe3845ad

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1205

Regressions/Differences/Improvements:
http://occt-tests/CR28802_2-CR27079-26-OCCT/Debian70-64/summary.html
http://occt-tests/CR28802_2-CR27079-26-OCCT/Windows-64-VC10/summary.html
Failed:
  boolean bsection M3
  bugs modalg_6 bug26896_1
  bugs modalg_6 bug26896_3
  bugs modalg_6 bug27310_2
  bugs modalg_6 bug28718

Only on Linux platform:
http://occt-tests/CR28802_2-CR27079-26-OCCT/Debian70-64/summary.html
Failed:
  bugs modalg_6 bug26938_1
  bugs modalg_6 bug26938_2
  bugs modalg_6 bug26938_3

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 92039230 / 91761650 [+0.30%]
Total CPU difference: 19016.17000000023 / 19335.060000000096 [-1.65%]
products component :
Total MEMORY difference: 31222137 / 31244557 [-0.07%]
Total CPU difference: 5360.709999999982 / 5296.999999999966 [+1.20%]
Testing on Windows:
occt component :
Total MEMORY difference: 58500211 / 58497831 [+0.00%]
Total CPU difference: 17458.47751259858 / 17520.28510879866 [-0.35%]
products component :
Total MEMORY difference: 22726658 / 22688363 [+0.17%]
Total CPU difference: 5386.168526499981 / 5357.885545199975 [+0.53%]

There are following differences in images found by testdiff.
http://occt-tests/CR28802_2-CR27079-26-OCCT/Debian70-64/diff-Debian70-64.html
http://occt-tests/CR28802_2-CR27079-26-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE boolean bsection N4: N4.png differs
IMAGE bugs modalg_1 bug10232: bug10232.png differs

mkv

2017-06-07 15:01

tester   ~0067188

Dear jgv,
Branch CR28802_2 has been rejected due to:
- regressions/differences/improvements
- differences in images

jgv

2017-06-08 17:35

developer   ~0067232

All the changes are improvements in fact (decrease of tolerances of resulting shapes), except

bugs modalg_6 bug26938_*

only on Linux.

git

2017-06-09 14:12

administrator   ~0067264

Branch CR28802_1 has been updated forcibly by jgv.

SHA-1: 067df98eaf169084c4f38b7a936b190207548e69

git

2017-06-09 15:21

administrator   ~0067272

Branch CR28802_3 has been created by jgv.

SHA-1: 01e80a9b002bdd62b68a1ad26b0f373835dbd509


Detailed log of new commits:

Author: jgv
Date: Fri Jun 9 15:21:04 2017 +0300

    0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect
    
        Method IntTools_FaceFace::MakeCurve is modified: reached tolerances 2d and 3d of approximator are not used for edges.

jgv

2017-06-09 15:22

developer   ~0067273

Dear Andrey,

the branch CR28802_3 is based on CR27079-26.

abv

2017-06-13 18:10

manager   ~0067379

It is agreed that problem with tests bugs modalg_6 bug26938_* on Linux should be addressed in context of separate issue, 0028833.

Thus please accept branch CR28802_3 for integration, adding Linux-only TODOs for these tests and updating tests listed in note 0028802:0067187 (decreased value of tolerance).

mkv

2017-06-14 17:14

tester   ~0067418

Last edited: 2017-06-14 17:22

Dear BugMaster,
Branch CR28802_3 from occt git-repository and CR27079-26 from products git-repository was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 01e80a9b002bdd62b68a1ad26b0f373835dbd509
SHA-1: dbaed06cd7378beaa42f2cfca5e37a8303ca1a25

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1211

Regressions/Differences/Improvements:
http://occt-tests/CR28802_3-CR27079-26-OCCT/Debian70-64/summary.html
http://occt-tests/CR28802_3-CR27079-26-OCCT/Windows-64-VC10/summary.html
Failed:
  boolean bsection M3
  bugs modalg_6 bug26896_1
  bugs modalg_6 bug26896_3
  bugs modalg_6 bug27310_2
  bugs modalg_6 bug28718

Only on Linux platform:
http://occt-tests/CR28802_3-CR27079-26-OCCT/Debian70-64/summary.html
Failed:
  bugs modalg_6 bug26938_1
  bugs modalg_6 bug26938_2
  bugs modalg_6 bug26938_3

Testing cases:
http://occt-tests/CR28802_3-CR27079-26-OCCT/Windows-64-VC10/boolean/bsection/N4.html
boolean bsection N4: OK
TOTAL CPU TIME: 214.6729761 sec (210.8197514 sec - on current master)

Testing on Linux:
occt component :
Total MEMORY difference: 92111350 / 92092166 [+0.02%]
Total CPU difference: 18915.890000000265 / 18989.35000000035 [-0.39%]
products component :
Total MEMORY difference: 33578139 / 33656232 [-0.23%]
Total CPU difference: 6257.7400000000725 / 6179.4300000000685 [+1.27%]
Testing on Windows:
occt component :
Total MEMORY difference: 58686112 / 58684365 [+0.00%]
Total CPU difference: 17755.846618798554 / 17488.726106498834 [+1.53%]
products component :
Total MEMORY difference: 24263890 / 24224898 [+0.16%]
Total CPU difference: 6293.501542700072 / 6164.207913900061 [+2.10%]

There are following differences in images found by testdiff.
http://occt-tests/CR28802_3-CR27079-26-OCCT/Debian70-64/diff-Debian70-64-image.html
http://occt-tests/CR28802_3-CR27079-26-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE boolean bsection N4: N4.png differs
IMAGE bugs modalg_6 bug26938_2: bug26938_2.png differs - only on Linux platform
IMAGE bugs modalg_6 bug26938_3: bug26938_3.png differs - only on Linux platform
IMAGE bugs modalg_6 bug26938_1: bug26938_1.png differs - only on Linux platform

git

2017-06-14 17:24

administrator   ~0067419

Branch CR28802_3 has been updated by mkv.

SHA-1: 5bfad74cd3ed43afb65bb158443bf61a01eb40c1


Detailed log of new commits:

Author: mkv
Date: Wed Jun 14 17:13:23 2017 +0300

    // Small correction of test cases for issue CR28802

mkv

2017-06-14 17:24

tester   ~0067420

Dear BugMaster,
Branch CR28802_3 from occt git-repository and branch CR27079-26 from products git-repository are TESTED.

mkv

2017-06-14 17:25

tester   ~0067421

Dear BugMaster,
following test cases are corrected and pushed to the branch CR28802_3 of occt git-repository:
  boolean bsection M3
  bugs modalg_6 bug26896_1
  bugs modalg_6 bug26896_3
  bugs modalg_6 bug27310_2
  bugs modalg_6 bug28718
  bugs modalg_6 bug26938_1
  bugs modalg_6 bug26938_2
  bugs modalg_6 bug26938_3

git

2017-07-03 08:45

administrator   ~0067878

Branch CR28802 has been deleted by kgv.

SHA-1: 5b183a4da781b13ff8df3cf52900a2941270fd74

git

2017-07-03 08:45

administrator   ~0067879

Branch CR28802_1 has been deleted by kgv.

SHA-1: 067df98eaf169084c4f38b7a936b190207548e69

git

2017-07-03 08:45

administrator   ~0067880

Branch CR28802_2 has been deleted by kgv.

SHA-1: c8bdeccef331e031b700166885a1d3f515aec035

git

2017-07-03 08:45

administrator   ~0067881

Branch CR28802_3 has been deleted by kgv.

SHA-1: 5bfad74cd3ed43afb65bb158443bf61a01eb40c1

Related Changesets

occt: master bdae3beb

2017-06-09 12:21:04

jgv


Committer: bugmaster Details Diff
0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect

Method IntTools_FaceFace::MakeCurve is modified: reached tolerances 2d and 3d of approximator are not used for edges.
Affected Issues
0028802
mod - src/IntTools/IntTools_FaceFace.cxx Diff File
mod - tests/boolean/bsection/M3 Diff File
mod - tests/bugs/modalg_6/bug26896_1 Diff File
mod - tests/bugs/modalg_6/bug26896_3 Diff File
mod - tests/bugs/modalg_6/bug26938_1 Diff File
mod - tests/bugs/modalg_6/bug26938_2 Diff File
mod - tests/bugs/modalg_6/bug26938_3 Diff File
mod - tests/bugs/modalg_6/bug27310_2 Diff File
mod - tests/bugs/modalg_6/bug28718 Diff File

Issue History

Date Modified Username Field Change
2017-06-01 15:35 jgv New Issue
2017-06-01 15:35 jgv Assigned To => msv
2017-06-02 10:38 git Note Added: 0066979
2017-06-02 10:43 jgv Note Added: 0066980
2017-06-02 10:43 jgv Assigned To msv => emv
2017-06-02 10:43 jgv Status new => resolved
2017-06-02 10:43 jgv Steps to Reproduce Updated
2017-06-02 11:54 emv Note Added: 0067008
2017-06-02 11:54 emv Assigned To emv => jgv
2017-06-02 11:54 emv Status resolved => assigned
2017-06-06 13:09 git Note Added: 0067116
2017-06-06 13:10 jgv Assigned To jgv => msv
2017-06-06 13:10 jgv Status assigned => resolved
2017-06-06 13:10 jgv Note Added: 0067117
2017-06-06 13:10 jgv Assigned To msv => bugmaster
2017-06-06 13:10 jgv Status resolved => reviewed
2017-06-06 14:29 mkv Assigned To bugmaster => mkv
2017-06-06 15:29 git Note Added: 0067132
2017-06-06 15:34 git Note Added: 0067134
2017-06-07 14:59 mkv Note Added: 0067185
2017-06-07 14:59 mkv Note Added: 0067186
2017-06-07 14:59 mkv Assigned To mkv => jgv
2017-06-07 14:59 mkv Status reviewed => assigned
2017-06-07 15:00 mkv Note Added: 0067187
2017-06-07 15:01 mkv Note Added: 0067188
2017-06-08 17:35 jgv Note Added: 0067232
2017-06-08 17:35 jgv Assigned To jgv => abv
2017-06-08 17:35 jgv Status assigned => feedback
2017-06-09 14:12 git Note Added: 0067264
2017-06-09 15:21 git Note Added: 0067272
2017-06-09 15:22 jgv Note Added: 0067273
2017-06-09 17:36 jgv Relationship added related to 0028833
2017-06-13 18:10 abv Note Added: 0067379
2017-06-13 18:10 abv Assigned To abv => mkv
2017-06-14 17:14 mkv Note Added: 0067418
2017-06-14 17:22 mkv Note Edited: 0067418
2017-06-14 17:23 mkv Test case number => boolean bsection N4
2017-06-14 17:24 git Note Added: 0067419
2017-06-14 17:24 mkv Note Added: 0067420
2017-06-14 17:24 mkv Assigned To mkv => bugmaster
2017-06-14 17:24 mkv Status feedback => tested
2017-06-14 17:25 mkv Note Added: 0067421
2017-06-16 17:17 bugmaster Changeset attached => occt master bdae3beb
2017-06-16 17:17 bugmaster Status tested => verified
2017-06-16 17:17 bugmaster Resolution open => fixed
2017-07-03 08:45 git Note Added: 0067878
2017-07-03 08:45 git Note Added: 0067879
2017-07-03 08:45 git Note Added: 0067880
2017-07-03 08:45 git Note Added: 0067881
2017-09-29 16:18 aiv Fixed in Version => 7.2.0
2017-09-29 16:28 aiv Status verified => closed