0028802: The tolerance reached by approximator is used in creation of an edge, it is incorrect

Method IntTools_FaceFace::MakeCurve is modified: reached tolerances 2d and 3d of approximator are not used for edges.